--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
-- course: BSc Computer Science
-  institute: University of Birmingham
-  dates: 2018 - 2021
-  logo: uob.png
+- course: BSc Of Awesomenes
+  institute: University of Magic
+  dates: 2013 - 2016
+  logo: image1.png
   
-- course: Explorer Fellow
-  institute: MLH Fellowship
+- course: BSc Electric and Automation Engineering
+  institute: SAMK University 
   dates: Fall 2020
-  logo: fellowship.svg
+  logo: image2.svg
   
