--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,5 +6,5 @@
 - course: BSc Electric and Automation Engineering
   institute: SAMK University 
   dates: Fall 2020
-  logo: image2.svg
+  logo: image1.png
   
