--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
-- role: Open Source Fellow
-  company: MLH Fellowship
+- role: Coffee brewer
+  company: Awesome company
   dates: Summer 2020
-  logo: fellowship.svg
+  logo: image2.png
